# MAVSDK

./: pleaseBuild.sh
example/distance_mission/: CMakeLists.txt  README.txt  distance_mission.cpp  input.cpp  input.h
example/fly_mission/: CMakeLists.txt  fly_mission.cpp
example/hamiltonian_cycle/: CMakeLists.txt  hamiltonian.cpp
example/offboard_velocity/: offboard_velocity.cpp
example/payload_mission/: CMakeLists.txt  README.md  README.txt  input.txt  input_old1.txt  input_old2.txt  input_thrust_logging.txt  payload_mission.cpp  payload_mission.h
example/payload_mission/flight_data/gazebo_run1/: Plot Name-iris_rotor_0:world_angular_velocity_z.csv  Plot Name-iris_rotor_1:world_angular_velocity_z.csv  Plot Name-iris_rotor_2:world_angular_velocity_z.csv  Plot Name-iris_rotor_3:world_angular_velocity_z.csv
example/payload_mission/path_generator/: README.md  input.txt  main.py
example/payload_mission/path_generator/generated_paths/Uniform/TypeA/Heavy/: waypoints10_heavy_uniform_A1.txt  waypoints10_heavy_uniform_A2.txt  waypoints10_heavy_uniform_A3.txt  waypoints15_heavy_uniform_A1.txt  (+11 more)
example/test_mission/: CMakeLists.txt  README.txt  datafile.txt  input.cpp  input.h  input.txt  test_mission.cpp  test_mission.cpp.autosave
example/time_mission/: CMakeLists.txt  README.txt  cost.cpp  input.h  input.txt  time_mission.cpp
src/plugins/mavlink_passthrough/: mavlink_passthrough.h
src/plugins/mission/: mission_impl.cpp  mission_item.cpp  mission_item_impl.cpp  mission_item_impl.h
src/plugins/mission/include/plugins/mission/: mission_item.h
(+119 files in other folders)
